--- a/.github/workflows/auto-generate-gitbook.yaml
+++ b/.github/workflows/auto-generate-gitbook.yaml
@@ -23,15 +23,11 @@ jobs:
 
             - name: configure Gitbook
               run: |
-                  npm install -g gitbook-cli          
-                  gitbook install
-                  npm install -g gitbook-summary
+                  npm install -g gitbook-cli
 
             - name: generate _book folder
               run: |
-                  book sm
                   gitbook build
-                  cp SUMMARY.md _book
 
             - name: push _book to branch gh-pages
               env:
@@ -41,10 +37,14 @@ jobs:
                   NAME: ${{github.repository_owner}}
               run: |
                   cd _book
+
                   git config --global user.email "${EMAIL}"
                   git config --global user.name "${NAME}"
                   git init
                   git remote add origin https://${REF}
+
+                  echo -e '# 全栈养成计划\n![auto-generate-gitbook](https://github.com/Senkita/Senkita.github.io/workflows/auto-generate-gitbook/badge.svg)' > README.md
+
                   git add .
                   git commit -m "build: update by Github Actions with build ${{github.run_number}} of ${{github.workflow}} for Github Pages"
                   git branch -M main
