--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: auto-generate-gitbook
+name: build
 
 on:
     push:
@@ -43,9 +43,11 @@ jobs:
                   git init
                   git remote add origin https://${REF}
 
-                  echo -e '# 全栈养成计划\n![auto-generate-gitbook](https://github.com/Senkita/Senkita.github.io/workflows/auto-generate-gitbook/badge.svg)' > README.md
+                  echo -e '# 全栈养成计划\n![build](https://github.com/Senkita/Senkita.github.io/workflows/build/badge.svg)' > README.md
+
+                  echo -e '.github/' > .gitignore
 
                   git add .
-                  git commit -m "build: update by Github Actions with build ${{github.run_number}} of ${{github.workflow}} for Github Pages"
+                  git commit -m "build(*): update by Github Actions with build ${{github.run_number}} of ${{github.workflow}} for Github Pages"
                   git branch -M main
                   git push --force --quiet "https://${TOKEN}@${REF}" main:gh-pages
