--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "gitbook-plugin-klipse": "^1.2.0",
         "gitbook-plugin-mathjax-pro": "^0.0.6",
         "gitbook-plugin-mermaid-gb3": "^2.1.0",
+        "gitbook-plugin-prism": "^2.4.0",
+        "gitbook-plugin-prism-themes": "^0.0.2",
         "gitbook-plugin-search-pro": "^2.0.2",
         "gitbook-plugin-sharing-plus": "^0.0.2",
         "gitbook-plugin-sitemap-general": "^0.1.1",
