--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-    "dependencies": {
-        "gitbook-plugin-alerts": "^0.2.0",
-        "gitbook-plugin-anchor-navigation-ex": "^1.0.14",
-        "gitbook-plugin-anchors": "^0.7.1",
-        "gitbook-plugin-copy-code-button": "^0.0.2",
-        "gitbook-plugin-edit-link": "^2.0.2",
-        "gitbook-plugin-expandable-chapters-small": "^0.1.7",
-        "gitbook-plugin-klipse": "^1.2.0",
-        "gitbook-plugin-mathjax-pro": "^0.0.6",
-        "gitbook-plugin-mermaid-gb3": "^2.1.0",
-        "gitbook-plugin-prism": "^2.4.0",
-        "gitbook-plugin-prism-themes": "^0.0.2",
-        "gitbook-plugin-search-pro": "^2.0.2",
-        "gitbook-plugin-sharing-plus": "^0.0.2",
-        "gitbook-plugin-sitemap-general": "^0.1.1",
-        "gitbook-plugin-splitter": "^0.0.8",
-        "gitbook-plugin-tbfed-pagefooter": "^0.0.1",
-        "gitbook-plugin-terminull-light": "^1.0.7",
-        "gitbook-plugin-todo": "^0.1.3",
-        "mathjax": "^2.7.7"
-    }
+  "dependencies": {
+    "gitbook-plugin-alerts": "^0.2.0",
+    "gitbook-plugin-anchor-navigation-ex": "^1.0.14",
+    "gitbook-plugin-anchors": "^0.7.1",
+    "gitbook-plugin-copy-code-button": "^0.0.2",
+    "gitbook-plugin-donate": "^1.0.2",
+    "gitbook-plugin-edit-link": "^2.0.2",
+    "gitbook-plugin-expandable-chapters-small": "^0.1.7",
+    "gitbook-plugin-github-buttons": "^3.0.0",
+    "gitbook-plugin-klipse": "^1.2.0",
+    "gitbook-plugin-mathjax-pro": "^0.0.6",
+    "gitbook-plugin-mermaid-gb3": "^2.1.0",
+    "gitbook-plugin-prism": "^2.4.0",
+    "gitbook-plugin-prism-themes": "^0.0.2",
+    "gitbook-plugin-search-pro": "^2.0.2",
+    "gitbook-plugin-sharing-plus": "^0.0.2",
+    "gitbook-plugin-sitemap-general": "^0.1.1",
+    "gitbook-plugin-splitter": "^0.0.8",
+    "gitbook-plugin-tbfed-pagefooter": "^0.0.1",
+    "gitbook-plugin-terminull-light": "^1.0.7",
+    "gitbook-plugin-todo": "^0.1.3",
+    "mathjax": "^2.7.7"
+  }
 }
