--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gitbook-plugin-donate": "^1.0.2",
     "gitbook-plugin-edit-link": "^2.0.2",
     "gitbook-plugin-expandable-chapters-small": "^0.1.7",
+    "gitbook-plugin-github": "^3.0.0",
     "gitbook-plugin-github-buttons": "^3.0.0",
     "gitbook-plugin-klipse": "^1.2.0",
     "gitbook-plugin-mathjax-pro": "^0.0.6",
